# Pipeline_Runner_service_layer

./: .env.example  .gitignore  CHALLENGE.md  DESIGN.md  README.md  pyproject.toml
pipeline_kit/: __init__.py  __main__.py  clock.py  config.py  demo.py  determinism.py  errors.py  gpu.py  pipelines.py  schemas.py  workload.py
service/: __init__.py  agent.py  api.py  harness.py  logs.py  metrics.py  models.py  resources.py  retry.py  runner.py  scheduler.py  service.py  simtime.py  store.py
tests/: conftest.py  test_gpu.py  test_pipelines.py  test_workload.py
tests/service/: conftest.py  test_api.py  test_backpressure.py  test_e2e.py  test_models.py  test_retry.py  test_review_regressions.py  test_runner.py  test_scheduler.py
